--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Conor's Recipe Website</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">World's Best Lasagna!</a>
+    <ul>
+        <a href="recipes/lasagna.html">World's Best Lasagna</a>
+        <br>
+        <a href="recipes/pizzadough.html">Easy Homemade Pizza Dough</a>
+        <br>
+        <a href="recipes/chicken.html">Garlic Fried Chicken</a>
+    </ul>
 </body>
 </html>
